manifests/hetzner/docmost/deployment-redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docmost-redis
  labels:
    app: docmost-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docmost-redis
  template:
    metadata:
      labels:
        app: docmost-redis
    spec:
      containers:
      - name: redis
        image: redis:REPLACEME
        ports:
        - containerPort: 6379
          name: redis
        resources:
          requests:
            memory: 32Mi
          limits:
            memory: 32Mi
