manifests/hetzner/docmost/statefulset-docmost.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: docmost-docmost
spec:
  selector:
    matchLabels:
      app: docmost-docmost
  replicas: 1
  template:
    metadata:
      labels:
        app: docmost-docmost
    spec:
      containers:
      - name: docmost
        image: docmost/docmost:REPLACEME
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - mountPath: /app/data/storage
          name: docmost-data
        resources:
          requests:
            memory: 512Mi
          limits:
            memory: 512Mi
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: docmost-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: local-path
      resources:
        requests:
          storage: 5Gi
