manifests/hetzner/docmost/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docmost
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: docmost
  hostnames:
  - docmost.techwerkers.nl
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - group: ""
        kind: Service
        name: docmost-docmost
        port: 3000
        weight: 1
